# two-layer-additive-net

./: .gitignore  Makefile  README.md  result.pkl  setup.cfg
addnet/: .#addnet.py  __init__.py  addnet.py  utils.py
examples/: test.ipynb
examples/cmp-acc/: result.pkl  run.py  tree.dot
examples/iris/: run.py
examples/visual/: run.ipynb
src/addnet/: addnet.py  utils.py
tests/: test.ipynb  test.py
