[metadata]
name = tlan
version = 0.0.1
description = Two Layer Additive Network
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Kohei Asano
author_email = asano@dais.is.tohoku.ac.jp

[options]
package_dir=
    =src
packages=find:
install_requires=
    numpy
    scipy
    sklearn
    graphviz
    
    
[options.packages.find]
where=src